--- a/VideoViTsModified.ipynb
+++ b/VideoViTsModified.ipynb
@@ -6,7 +6,7 @@
       "name": "VideoViTsModified.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNdRoyF3tX5f0c6WZGvR1px",
+      "authorship_tag": "ABX9TyMGxrwCYeC+erlK6XAJ8lHG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,9 @@
       "cell_type": "markdown",
       "source": [
         "# Downloading the dataset\n",
-        "I have implemented the modified Video Vision Transformer on two classes which I took from Kinetics dataset. I have used a pre implemented downloader and downloaded about 150 videos from each class. Downloading even those many videos takes a sufficiently large amount of time. Hence I have downloaded it into a drive which you may link into the colab notebook"
+        "I have implemented the modified Video Vision Transformer on two classes which I took from Kinetics dataset. I have used a pre implemented downloader and downloaded about 150 videos from each class. Downloading even those many videos takes a sufficiently large amount of time. Hence I have downloaded it into a drive which you may link into the colab notebook\n",
+        "\n",
+        "The Drive: [drive](https://drive.google.com/drive/u/0/folders/1-1BGLNghpKtHQ0AdfsNyWThzy2HnEpBq)"
       ],
       "metadata": {
         "id": "F1WQ-rTgGmwB"
