--- a/VideoViTsModified.ipynb
+++ b/VideoViTsModified.ipynb
@@ -6,7 +6,7 @@
       "name": "VideoViTsModified.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMGxrwCYeC+erlK6XAJ8lHG",
+      "authorship_tag": "ABX9TyPrr5H6Iq+qrdQIVuSgdTwn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
       "cell_type": "markdown",
       "source": [
         "# Downloading the dataset\n",
-        "I have implemented the modified Video Vision Transformer on two classes which I took from Kinetics dataset. I have used a pre implemented downloader and downloaded about 150 videos from each class. Downloading even those many videos takes a sufficiently large amount of time. Hence I have downloaded it into a drive which you may link into the colab notebook\n",
+        "I have implemented the modified Video Vision Transformer on two classes which I took from Kinetics dataset. I have used a pre implemented downloader and downloaded about 150 videos from each class. Downloading even those many videos takes a sufficiently large amount of time. Hence I have downloaded it into a drive which you may link into the colab notebook and skip this section.\n",
         "\n",
         "The Drive: [drive](https://drive.google.com/drive/u/0/folders/1-1BGLNghpKtHQ0AdfsNyWThzy2HnEpBq)"
       ],
@@ -212,7 +212,7 @@
       "metadata": {
         "id": "JDeHf5MharaR"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -261,7 +261,7 @@
       "metadata": {
         "id": "eBzJiXTEwHgS"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -291,7 +291,7 @@
       "metadata": {
         "id": "YVN9nrDPSpZG"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -336,7 +336,7 @@
       "metadata": {
         "id": "3n2_nLYiDq4q"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -369,7 +369,7 @@
       "metadata": {
         "id": "7eiZTQC68pYZ"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -396,7 +396,7 @@
       "metadata": {
         "id": "REQGmbj5Lc02"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -416,7 +416,7 @@
       "metadata": {
         "id": "vbjsDC8wyPGx"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -508,7 +508,7 @@
       "metadata": {
         "id": "vSLC22ddIvr7"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -531,7 +531,7 @@
       "metadata": {
         "id": "EVRORuLDUdsl"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -578,7 +578,7 @@
       "metadata": {
         "id": "_R8VmIevm9Cz"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
