Updated the code to save checkpoints in the training

--- a/VideoViTsModified.ipynb
+++ b/VideoViTsModified.ipynb
@@ -6,7 +6,7 @@
       "name": "VideoViTsModified.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPrr5H6Iq+qrdQIVuSgdTwn",
+      "authorship_tag": "ABX9TyOK/8PWlahl6eCazoEFmEhF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,7 +83,7 @@
         "import os\n",
         "\n",
         "\n",
-        "number_of_vids_perclass = 200\n",
+        "number_of_vids_perclass = 161\n",
         "f = open('/content/kinetics-downloader/resources/kinetics_train.json')\n",
         "traindat = json.load(f)\n",
         "dicti = {}\n",
@@ -212,7 +212,7 @@
       "metadata": {
         "id": "JDeHf5MharaR"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -261,7 +261,7 @@
       "metadata": {
         "id": "eBzJiXTEwHgS"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -291,7 +291,7 @@
       "metadata": {
         "id": "YVN9nrDPSpZG"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -336,7 +336,7 @@
       "metadata": {
         "id": "3n2_nLYiDq4q"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -369,7 +369,7 @@
       "metadata": {
         "id": "7eiZTQC68pYZ"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -387,16 +387,16 @@
         "        batchnum = 0\n",
         "        while((batchnum+numframes)<framenum[classnum][vidnum]):\n",
         "            classbatch.append(finalclass[classnum][vidnum][batchnum:batchnum+numframes])\n",
-        "            batchnum+=1\n",
+        "            batchnum+=numframes\n",
         "    batcheddata.append(classbatch)\n",
         "\n",
-        "np.random.shuffle(batcheddata[0], )\n",
+        "np.random.shuffle(batcheddata[0])\n",
         "np.random.shuffle(batcheddata[1])"
       ],
       "metadata": {
         "id": "REQGmbj5Lc02"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -416,7 +416,7 @@
       "metadata": {
         "id": "vbjsDC8wyPGx"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -424,7 +424,7 @@
       "source": [
         "model.summary()\n",
         "\n",
-        "keras.utils.vis_utils.plot_model(model, to_file= 'model_plot.png', show_shapes = True, show_layer_names = True)"
+        "# keras.utils.vis_utils.plot_model(model, to_file= 'model_plot.png', show_shapes = True, show_layer_names = True)"
       ],
       "metadata": {
         "id": "78CEQh8NI_J_"
@@ -446,24 +446,23 @@
         "    print(f'Epoch {i+1}')\n",
         "    print('----------------------')\n",
         "    label = 0\n",
-        "    dunkingPtr = 0\n",
+        "    dunkingPtr = 0    #403\n",
         "    dribblingPtr = 0\n",
-        "    ptrs = [dunkingPtr, dribblingPtr]\n",
         "    losses = [] \n",
-        "    while ptrs[0]<=lenDunking or ptrs[1]<lenDribbling:\n",
+        "    while dunkingPtr<lenDunking or dribblingPtr<lenDribbling:\n",
         "        if label == 0:\n",
         "            if dunkingPtr<lenDunking:\n",
         "                batch = batcheddata[label][dunkingPtr]\n",
         "                dunkingPtr+=1\n",
         "            else:\n",
-        "                batch = batcheddata[label][dribblingPtr]\n",
+        "                batch = batcheddata[1][dribblingPtr]\n",
         "                dribblingPtr+=1\n",
         "        else:\n",
         "            if dribblingPtr<lenDribbling:\n",
         "                batch = batcheddata[label][dribblingPtr]\n",
         "                dribblingPtr+=1\n",
         "            else:\n",
-        "                batch = batcheddata[label][dunkingPtr]\n",
+        "                batch = batcheddata[0][dunkingPtr]\n",
         "                dunkingPtr+=1\n",
         "\n",
         "        imbatch = []\n",
@@ -488,9 +487,18 @@
         "        label = label^1\n",
         "\n",
         "        if (dunkingPtr + dribblingPtr) % 20 == 0:\n",
-        "            print(f'the loss on the {dunkingPtr + dribblingPtr}/{lenDunking + lenDribbling} step is: {loss}')    \n",
+        "            print(f'the loss on the {dunkingPtr + dribblingPtr}/{lenDunking + lenDribbling} step is: {loss}')\n",
+        "            if (dunkingPtr + dribblingPtr)%100 == 0:\n",
+        "                np.save(f'{from_path}/weightschkpt', np.array(model.get_weights(), dtype=object))\n",
+        "                print(f\"the checkpoint pointers are: DribblingPtr: {dribblingPtr}, DunkingPtr: {dunkingPtr}\")\n",
         "\n",
-        "    print(f'the loss at the end of epoch{i}: {np.mean(losses)}')\n",
+        "        \n",
+        "        if (np.mean(losses[-10:])<=0.01):\n",
+        "            print('changing the lr')\n",
+        "            optimizer.learning_rate = optimizer.learning_rate//2\n",
+        "\n",
+        "    \n",
+        "    print(f'the loss at the end of epoch{i+1}: {np.mean(losses)}')\n",
         "    print('----------------------')\n",
         "    "
       ],
@@ -508,37 +516,37 @@
       "metadata": {
         "id": "vSLC22ddIvr7"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "np.save(f'{from_path}/weights', np.array(model.get_weights()))"
+        "np.save(f'{from_path}/weights1', np.array(model.get_weights(), dtype=object))"
       ],
       "metadata": {
         "id": "xThdLNgwI3KW"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "weights = np.load('/content/gdrive/MyDrive/KineticsBasketBall/weights.npy', allow_pickle=True)\n",
+        "weights = np.load('/content/gdrive/MyDrive/KineticsBasketBall/weights1.npy', allow_pickle=True)\n",
         "model.set_weights(weights)"
       ],
       "metadata": {
         "id": "EVRORuLDUdsl"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "#taking random videos from the train set to check the accuracy\n",
-        "samples = 7\n",
+        "samples = 30\n",
         "test = np.random.choice(len(batcheddata[0]),samples)\n",
         "\n",
         "truPos = 0\n",
@@ -578,17 +586,42 @@
       "metadata": {
         "id": "_R8VmIevm9Cz"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# trained on fewer epochs so the accuracy is not that great\n",
-        "print(f'acc = {(truPos+truNegs)/(truPos+truNegs+falsePos+falseNegs)}')"
+        "print(f'acc = {(truPos+truNegs)/(truPos+truNegs+falsePos+falseNegs)}')\n",
+        "print(f'f1Score = {(2*truPos)/(2*truPos+falsePos+falseNegs)}')"
       ],
       "metadata": {
-        "id": "4er5O7ihpYuh"
+        "id": "4er5O7ihpYuh",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "388ef8f2-9642-4818-a1be-cebd295506da"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "acc = 0.7166666666666667\n",
+            "f1Score = 0.6666666666666666\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "zgyIy5sWNCGm"
       },
       "execution_count": null,
       "outputs": []
