Updated code to allow weight checkpoints while training

--- a/VideoViTsModified.ipynb
+++ b/VideoViTsModified.ipynb
@@ -6,7 +6,7 @@
       "name": "VideoViTsModified.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOK/8PWlahl6eCazoEFmEhF",
+      "authorship_tag": "ABX9TyPPx17eK3PuXnfcPM6izUNI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -446,7 +446,7 @@
         "    print(f'Epoch {i+1}')\n",
         "    print('----------------------')\n",
         "    label = 0\n",
-        "    dunkingPtr = 0    #403\n",
+        "    dunkingPtr = 0    \n",
         "    dribblingPtr = 0\n",
         "    losses = [] \n",
         "    while dunkingPtr<lenDunking or dribblingPtr<lenDribbling:\n",
@@ -522,7 +522,7 @@
     {
       "cell_type": "code",
       "source": [
-        "np.save(f'{from_path}/weights1', np.array(model.get_weights(), dtype=object))"
+        "np.save(f'{from_path}/weights2', np.array(model.get_weights(), dtype=object))"
       ],
       "metadata": {
         "id": "xThdLNgwI3KW"
